feat: findTravelByDestination
